tests/fixtures/invalid/int_notin_int.py
# Cannot use 'not in' with Int and Int
x: bool = 1 not in 2
